Converted sources from java 17 to java 11
https://chatgpt.com/share/682dfa8c-1f7c-8003-b740-77c5844477b6

Signed-off-by: Marvin Froeder <marvin@datasqrl.com>