@@ -15,7 +15,6 @@
  */
 package com.datasqrl.flinkrunner.format.json;
 
-import java.io.Serial;
 import java.util.Objects;
 import org.apache.flink.annotation.Internal;
 import org.apache.flink.api.common.serialization.SerializationSchema;
@@ -44,7 +43,8 @@ import org.apache.flink.util.jackson.JacksonMapperFactory;
  */
 @Internal
 public class SqrlJsonRowDataSerializationSchema implements SerializationSchema<RowData> {
-  @Serial private static final long serialVersionUID = 1L;
+
+  private static final long serialVersionUID = 1749046144758581926L;
 
   /** RowType to generate the runtime converter. */
   private final RowType rowType;
@@ -103,7 +103,7 @@ public class SqrlJsonRowDataSerializationSchema implements SerializationSchema<R
       runtimeConverter.convert(mapper, node, row);
       return mapper.writeValueAsBytes(node);
     } catch (Throwable t) {
-      throw new RuntimeException("Could not serialize row '%s'.".formatted(row), t);
+      throw new RuntimeException(String.format("Could not serialize row '%s'.", row), t);
     }
   }
 
